# polymath-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh
.cargo/: config.toml
.github/workflows/: java-release.yml  npm-release.yml  rust-release.yml  rust.yml
examples/editor-js/: package-lock.json  package.json  webpack.config.js
examples/editor-js/src/: index.html  index.js
examples/polymath-cli/: Cargo.toml
examples/polymath-cli/src/: main.rs
polymath-c/: Cargo.toml
polymath-c/src/: lib.rs
polymath-java/: pom.xml  pom.xml.versionsBackup
polymath-java/src/main/java/eu/reverseengineer/asciimath/: AsciiMath.java
polymath-java/src/main/java/eu/reverseengineer/polymath/: Polymath.java
polymath-java/src/main/resources/darwin-aarch64/: libpolymath_c.dylib
polymath-java/src/main/resources/darwin-x86-64/: libpolymath_c.dylib
polymath-java/src/test/java/eu/reverseengineer/asciimath/: AsciiMathTest.java
polymath-java/src/test/java/eu/reverseengineer/polymath/: PolymathTest.java
polymath-js/: Cargo.toml
polymath-rs/: Cargo.toml  README.md
polymath-rs/src/: lib.rs  mathml.rs  transformations.rs
polymath-rs/src/ast/: mod.rs  predictive.rs
polymath-rs/src/cst/: mod.rs  predictive.rs
polymath-rs/src/tokens/: mod.rs  types.rs
polymath-web/: Cargo.toml  README.md
polymath-web/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: java.rs  main.rs
