[workspace]
resolver = "2"
members = ["polymath-c", "polymath-rs", "polymath-js", "examples/polymath-cli"]

[workspace.package]
version = "0.1.1-alpha.1"
authors = ["Felix Marezki"]
description = "Polymath is an Asciimath implementation with bindings for c, java and javascript written in rust"
documentation = "https://docs.rs/polymath-rs/latest/polymath_rs/"
li

[workspace.dependencies]
itertools = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
wasm-bindgen = "0.2.63"

# javascript / wasm
console_error_panic_hook = "0.1.7"
wee_alloc = "0.4.5"
wasm-bindgen-test = "0.3.13"
