[package]
name = "polymath-js"
version = "0.1.0"
authors = ["Felix Marezki <fmarezki@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { workspace = true }
polymath-rs = { path = "../polymath-rs" }

console_error_panic_hook = { workspace = true, optional = true }
wee_alloc = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[profile.release]
opt-level = "s"
