[package]
edition = "2021"
name = "polymath-js"
license = "MIT"
description = "Polymath Javascript Bindings"
authors.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { workspace = true }
polymath-rs = { path = "../polymath-rs", version = "0.1.1-alpha.0" }

console_error_panic_hook = { workspace = true, optional = true }
wee_alloc = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[profile.release]
opt-level = "s"
