[package]
name = "polymath-rs"
description = "AsciiMath parser"
repository = "https://github.com/reenigneEsrever92/polymath-rs"
version = "0.1.1-alpha.0"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["asciimath", "parser", "mathml"]
categories = ["mathematics", "parser-implementations"]

[dependencies]
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
