[package]
name = "polymath-rs"
description = "AsciiMath parser"
authors.workspace = true
version.workspace = true
repository = "https://github.com/reenigneEsrever92/polymath-rs"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["asciimath", "parser", "mathml"]
categories = ["mathematics", "parser-implementations"]

[dependencies]
itertools = { workspace = true }
tracing = { workspace = true }

[devDependencies]
tracing-subscriber = { workspace = true }
